--- a/web/src/main.css
+++ b/web/src/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,900');
+@import url("https://fonts.googleapis.com/css?family=Lato:400,900");
 
 /* ------------- */
 
@@ -92,12 +92,12 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    font-size: 100%;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -112,34 +112,34 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote::before,
 blockquote::after,
 q::before,
 q::after {
-    content: '';
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* -------------
@@ -148,14 +148,14 @@ table {
 */
 
 body {
-    font-family: 'Lato', sans-serif;
-    color: #1d1d1b;
-    background-color: #78b9e6;
-    padding: 8px;
+  font-family: "Lato", sans-serif;
+  color: #1d1d1b;
+  background-color: #78b9e6;
+  padding: 8px;
 }
 
 a,
 a:visited,
 a:active {
-    color: #d33682;
+  color: #d33682;
 }
